# VoiceHub

./: .gitignore  README.md
docs/: ios.md  macos.md  models.md  opus_mt.md
llama/: build_ios.sh  build_macos.sh
llama/csrc/: CMakeLists.txt  llamacpp_bridge.h  llamacpp_config.h  llamacpp_ffi.cpp  llamacpp_ffi.h  llamacpp_tokenizer.cpp  llamacpp_tokenizer.h  llamacpp_translator.cpp  llamacpp_translator.h  test_gguf_inference.cpp  test_llamacpp_inference.cpp
llama/flutter/llamacpp_macos/: pubspec.yaml
llama/flutter/llamacpp_macos/ios/: llamacpp_macos.podspec
llama/flutter/llamacpp_macos/lib/: llamacpp_macos.dart
llama/flutter/llamacpp_macos/macos/: llamacpp_macos.podspec
marian/: build_macos.sh
marian/csrc/: CMakeLists.txt  marian_bridge.h  marian_config.h  marian_ffi.cpp  marian_ffi.h  marian_tokenizer.cpp  marian_tokenizer.h  marian_translator.cpp  marian_translator.h
marian/flutter/marian_nmt_macos/: pubspec.yaml
marian/flutter/marian_nmt_macos/lib/: marian_nmt_macos.dart
marian/flutter/marian_nmt_macos/macos/: marian_nmt_macos.podspec
opus_mt/: .gitignore  build_ios.sh  build_macos.sh
opus_mt/calib_data/: zh.txt
opus_mt/csrc/: CMakeLists.txt  opus_mt_bridge.h  opus_mt_config.h  opus_mt_ffi.cpp  opus_mt_ffi.h  opus_mt_tokenizer.cpp  opus_mt_tokenizer.h  opus_mt_translator.cpp  opus_mt_translator.h  test_opus_mt_inference.cpp
opus_mt/export/: export_opus_mt.sh  prepare_mt_tiny_zh_en.sh  prepare_mt_zh_en.sh
opus_mt/flutter/opus_mt_macos/: pubspec.yaml
opus_mt/flutter/opus_mt_macos/ios/: opus_mt_macos.podspec
opus_mt/flutter/opus_mt_macos/ios/Classes/: ForceLinkOpusMt.m
opus_mt/flutter/opus_mt_macos/lib/: opus_mt_macos.dart
opus_mt/flutter/opus_mt_macos/macos/: opus_mt_macos.podspec
opus_mt/hf/: _common.py  convert_to_onnx.py  download.py  quantize.py  quantize_encoder.py  share_weights.py  test_onnx.py
scripts/: build_android_all.sh  build_ios_all.sh  build_macos_all.sh  test_zipformer.sh  update_app_icons.py
sherpa-onnx/flutter/sherpa_onnx/: pubspec.yaml
sherpa-onnx/flutter/sherpa_onnx/lib/src/: tts.dart
sherpa-onnx/sherpa-onnx/csrc/: CMakeLists.txt  offline-tts-impl.cc  offline-tts-matcha-model.cc  offline-tts-model-config.cc  offline-tts-model-config.h  offline-tts-vits-model-config.cc  online-piper-phonemize-lexicon.cc  online-piper-phonemize-lexicon.h  online-tts-vits-impl.h  online-tts-vits-model-config.cc  online-tts-vits-model-config.h  online-tts-vits-model.cc  online-tts-vits-model.h  session.cc
simulst/: build_ios.sh  build_macos.sh
simulst/csrc/: CMakeLists.txt  fbank_extractor.cpp  fbank_extractor.h  llama_gguf_decoder.cpp  llama_gguf_decoder.h  npz_loader.cpp  npz_loader.h  onnx_streaming_encoder.cpp  onnx_streaming_encoder.h  simulst_config.h  simulst_ffi.cpp  simulst_ffi.h  streaming_ast_pipeline.cpp  streaming_ast_pipeline.h  test_simulst_gpu.cpp  test_simulst_inference.cpp
simulst/flutter/simulst_macos/: pubspec.yaml
simulst/flutter/simulst_macos/ios/: simulst_macos.podspec
simulst/flutter/simulst_macos/ios/Classes/: ForceLinkSimulst.m
simulst/flutter/simulst_macos/lib/: simulst_macos.dart
simulst/flutter/simulst_macos/macos/: simulst_macos.podspec
simulst/test/: test_config.json  test_config_gpu.json
voice_app/: pubspec.yaml
voice_app/android/app/: build.gradle.kts
voice_app/android/app/src/main/: AndroidManifest.xml
voice_app/ios/: Podfile
voice_app/ios/Runner/: Info.plist
voice_app/ios/Runner.xcodeproj/: project.pbxproj
voice_app/lib/: asr_screen.dart  asr_service.dart  cascade_translation_screen.dart  chat_screen.dart  llama_chat_service.dart  llama_nmt_service.dart  llamacpp_ffi_bridge.dart  local_onnx_model.dart  main.dart  marian_ffi_bridge.dart  model_management_sheet.dart  model_manager.dart  native_nmt_service.dart  nmt_service.dart  nmt_service_common.dart  opus_mt_ffi_bridge.dart  translation_screen.dart  tts_screen.dart  tts_service.dart  utils.dart  voice_engine_ffi_bridge.dart
voice_app/lib/ffi/: simulst_ffi_bridge.dart  voice_engine_ffi_bridge.dart
voice_app/lib/models/: local_onnx_model.dart  model_manager.dart  subtitle_segment.dart
voice_app/lib/onnxruntime/src/: ort_env.dart  ort_isolate_session.dart  ort_session.dart  ort_status.dart  ort_value.dart
voice_app/lib/onnxruntime/src/bindings/: bindings.dart
voice_app/lib/services/: advanced_settings.dart  asr_service.dart  audio_file_history_store.dart  cache_statistics_service.dart  cascade_history_store.dart  chat_history_store.dart  dual_dialogue_history_store.dart  llama_chat_service.dart  llama_nmt_service.dart  native_nmt_service.dart  nmt_service.dart  nmt_service_common.dart  simulst_history_store.dart  simulst_service.dart  subtitle_export_service.dart  tts_service.dart  vad_settings.dart
voice_app/lib/ui/screens/: asr_screen.dart  audio_file_transcription_screen.dart  cascade_translation_screen.dart  chat_screen.dart  dual_dialogue_screen.dart  simultaneous_translation_screen.dart  translation_screen.dart  tts_screen.dart
voice_app/lib/ui/widgets/: audio_file_history_sheet.dart  chat_history_sheet.dart  dual_dialogue_history_sheet.dart  model_management_sheet.dart  responsive_bilingual_text.dart
voice_app/macos/: Podfile
voice_app/macos/Runner/: DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift  Release.entitlements  libmarian_nmt.dylib
voice_app/macos/Runner.xcodeproj/: project.pbxproj
voice_app/macos/Runner/Configs/: AppInfo.xcconfig
voice_app/web/: index.html  manifest.json
voice_app/windows/flutter/: generated_plugins.cmake
voice_engine/: build_ios.sh  build_macos.sh
voice_engine/csrc/: CMakeLists.txt  streaming_asr_pipeline.cpp  streaming_asr_pipeline.h  voice_engine_config.h  voice_engine_ffi.cpp  voice_engine_ffi.h
voice_engine/flutter/voice_engine_macos/: pubspec.yaml
voice_engine/flutter/voice_engine_macos/ios/: voice_engine_macos.podspec
voice_engine/flutter/voice_engine_macos/lib/: voice_engine_macos.dart
voice_engine/flutter/voice_engine_macos/macos/: voice_engine_macos.podspec
(+1 files in other folders)
